--- a/sass/utillities/_extend.scss
+++ b/sass/utillities/_extend.scss
@@ -1,4 +1,3 @@
-
 //extend
 @media screen and (min-width:576px) {
     %grid2 {
@@ -60,10 +59,51 @@
         }
     }
 }
-%borde{
+
+%borde {
     border: 0.3rem solid nth($colores, 7);
     border-radius: $medida-05;
 }
+
+%prol {
+    font-family: Montserrat;
+}
+
+%pro {
+    @extend %borde;
+    margin: $medida-1 + $medida-025;
+    text-align: center;
+    transition: 1s;
+
+    h2 {
+        padding: $medida-1;
+        @extend %prol;
+    }
+h3{
+    @extend %prol;
+}
+    p {
+        font-weight: bold;
+        font-size: $medida-1 + $medida-05;
+        padding-bottom: $medida-1;
+        @extend %prol;
+    }
+
+    &:hover {
+        transform: scale(1.08);
+    }
+
+    img {
+        @include sizes(66.6%, 12.5rem);
+        @extend %prol;
+    }
+
+    span {
+        padding: $medida-05;
+        @extend %prol;
+    }
+}
+
 %boton {
     display: flex;
     justify-content: center;
@@ -101,14 +141,15 @@
 
 
 %bot {
-    background-color:  nth($colores, 7);
+    background-color: nth($colores, 7);
     @extend %borde;
     transition: 1s;
     font-family: Tiemann, serif;
     font-weight: bold;
-    font-size: $medida-1;
-    @include sizes(10rem,$medida-2 + $medida-025);
-        &:hover {
-            transform: scale(1.08);
-        }
+    font-size: $medida-1 + $medida-025;
+    @include sizes(9rem, $medida-2 + $medida-025);
+
+    &:hover {
+        transform: scale(1.08);
+    }
 }
