--- a/sass/secundarios/_index.scss
+++ b/sass/secundarios/_index.scss
@@ -55,40 +55,19 @@
     }
 
     .mainindex__sec3__contenedorpro__hijo {
-        @include margen(0rem $medida-1, $medida-1 0rem);
-        width: auto;
-        text-align: center;
-        @extend %borde;
-        overflow: auto;
-        transition: 1s;
         margin-top: $medida-2;
-
         p {
-            font-weight: bold;
-            font-size: $medida-1 + $medida-05;
-            padding-bottom: $medida-1;
-            line-height: $medida-2;
-            font-size: $medida-1 + 0.125rem;
-
             .s1 {
                 text-decoration: line-through;
                 opacity: 50%;
             }
         }
-
-        &:hover {
-            transform: scale(1.08);
-        }
-
-        img {
-            @include sizes(66.6%, 12.5rem)
-        }
-
         span {
             padding: $medida-05;
             line-height: $medida-2;
             font-size: $medida-1 + $medida-05;
         }
+        @extend %pro;
     }
 
     .mainindex__sec3__boton {
