--- a/sass/utillities/_extend.scss
+++ b/sass/utillities/_extend.scss
@@ -14,18 +14,22 @@
     justify-content: center;
     align-items: center;
 }
+
 %pro {
     @extend %borde;
-    border: 0.3rem solid nth($colores, 2);
-    margin: $medida-1 + $medida-025;
+    border: 3px groove nth($colores, 2);
+    margin: $medida-1 - $medida-025;
     text-align: center;
     transition: 1s;
     padding: $medida-1;
     overflow: hidden;
     @extend %flexm;
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+
     h2 {
         @include tb($medida-05, $medida-05);
         @extend %prold;
+        font-size: $medida-3 - $medida-05;
     }
 
     p {
@@ -39,17 +43,19 @@
         transform: scale(1.08);
     }
 
-    img {
-        @include sizes(66.6%, 12.5rem);
-        @extend %prold;
-    }
 
     button {
         font-size: $medida-1 + $medida-05;
-        background-color:nth($colores, 9); 
-            &:hover{
-                background-color:nth($colores, 2); 
-            }
+        background-color: nth($colores, 9);
+
+        &:hover {
+            background-color: nth($colores, 2);
+        }
+    }
+}
+%imgpm{
+    img {
+        @include sizes(100%, 9.2rem);
     }
 }
 
@@ -102,6 +108,8 @@
     }
 
     %prod {
+        margin: $medida-1 + $medida-025;
+
         p {
             font-size: $medida-1 + $medida-05;
         }
